# MMA

./: .gitignore  CITATION.cff  CMakeLists.txt  Code status.docx  DEVELOPMENT.md  FreeFormInputs.inp  Hankel.py  HankelPython_local.sh  Hankel_Ilist_and_phenom.py  Hankel_from_Intensity_list.py  Hankelnum.py  Hankelserial.py  Hfn.py  Hyperslab_by_chunk.c  Hyperslab_by_row.c  MPI-RMA_tools.c  MPI-RMA_tools.h  MPI-RMA_tools2.c  README.md  compile.sh  compile1DTDSE.sh  constants.c  counting.c  counting2.c  counting_strided.c  define_field.c  h5_rdwt.c  hdf5_tools.c  main.c  main_timing.c  mpi_mutex_counter_tuto.c  mpi_mutex_tuto.c  mpi_nxtval_tuto.c  mpi_window_tuto.c  mutex_definition.c  mynumerics.py  notes.md  numerical_constants.h  physical_constants.h  prepare_input_file.py  (+26 more)
1DTDSE/: CMakeLists.txt  CMakeLists_dll_only.txt  CMakeLists_full.txt  DEVELOPMENT.md  Doxyfile  Makefile  PythonTDSE.ipynb  PythonTDSE.py  README.md  TDSE_input_params.inp  compilation_list  compile_and_reset_strided_coarsed  constants.c  fields_scanner.c  hdf5_check.py  install_out.txt  ionization.h5  main.c  main_timing.c  prop.c  reading_serial.c  singleTDSE.c  single_caller.c  strided_scheduler_separated_outs.c  strided_scheduler_separated_outs_coarsen.c  strided_scheduler_separated_outs_coarsen_orig.c  strided_scheduler_separated_outs_coarsen_test.c  test_dll.c  test_dll.py  tests.py  tools.c  tools_MPI-RMA2.c  tools_algorithmic.c  tools_hdf5.c  tridiag.c  util.h  util_hdf5.h
1DTDSE/PythonCTDSE/: constants.py  ctypes_helper.py  plotting.py  structures.py
1DTDSE/compilation/: compile_and_reset_strided  compile_and_reset_strided_coarsed
1DTDSE/convergence/: analyse_conv1.py  analyse_conv2.py
1DTDSE/hdf5+mpi_tuto/: MPI-RMA_tools.c  copyandrun  mpi_mutex_counter_tuto.c  mpi_mutex_tuto.c  mpi_nxtval_tuto.c  mpi_window_tuto.c  randomwrite.c  rwhdf5_non_mutexed_tuto.c  rwhdf5_tuto.c  util.h
1DTDSE/misc/: interactive_TDSE_scheme.tex
1DTDSE/post_processing/: TDSE_input_params.inp  TDSE_input_params_mod.inp  TDSE_input_params_short.inp  merge.py  merge_FSource_only.py  merge_list.py  merge_remove.py  prepare_TDSE.py  prepare_TDSE_Nz.py  remove_TDSE_outputs.py
1DTDSE/prepare_fields/: TDSE_convergence1.inp  TDSE_create_fields.inp  TDSE_create_fields2.inp  TDSE_scale1.inp  TDSE_scale2.inp  TDSE_scale3.inp  TDSE_scale4.inp  prepare_field_single.py  prepare_fields.py
1DTDSE/processing/: FreeFormInputsTDSE_10planes.inp  FreeFormInputsTDSE_10planes_stride10.inp  FreeFormInputsTDSE_10planes_stride100.inp  FreeFormInputsTDSE_2mm.inp  FreeFormInputsTDSE_3planes.inp  FreeFormInputsTDSE_50planes_stride4.inp  FreeFormInputsTDSE_couple.inp  FreeFormInputsTDSE_couple_resize.inp  FreeFormInputsTDSE_couple_resize_print_only.inp  FreeFormInputsTDSE_couple_resize_trg.inp  FreeFormInputsTDSE_firstplane.inp  FreeFormInputsTDSE_par1.inp  FreeFormInputs_TDSE_single.inp  TDSE_convergence1.inp  TDSE_convergence1_2Nx.inp  TDSE_convergence1_2Nxdx2.inp  TDSE_convergence1_dt2.inp  TDSE_convergence1_dx2.inp  clean_and_Hankel.sh  compilation_list  compilation_list_ECL  compile1DTDSE.sh  compile_single_ECL  convergence1.sh  convergence1_2Nx.sh  convergence1_2Nxdt2.sh  convergence1_2Nxdx2.sh  convergence1_4Nx.sh  convergence1_dx2.sh  copyandrun  data.h5  make_par.sh  make_single.sh  prepandrunTDSE.sh  readh5.c  rerun_Hankel.sh
1DTDSE/python/: collect_entry_exit_only2.py  merge.py  prepare_TDSE_Nz.py  single_tmp_file_analysis.py  single_tmp_file_analysis_merged.py  single_tmp_file_analysis_merged_long.py
1DTDSE/reintroduce/: define_field.c
1DTDSE/scripts/: MPI_TDSE.sh  MPI_TDSE_MIX.slurm  MPI_TDSE_SUNRISE.slurm  cines.slurm  compile_and_reset_strided_coarsed  merge_all_move.slurm  merge_all_v1.slurm  merge_all_v2.slurm  merge_hdf5.sh  merge_hdf5.slurm  prepare_TDSE.sh  prepare_TDSE.slurm  remove_temp.slurm  repack_hdf5.slurm  sendjob.slurm  sendjob_upscale.slurm  sendjob_upscale2_10planes.slurm  sendjob_upscale2_40planes.slurm  sendjob_upscale2_50planes.slurm  sendjob_upscale_10planes.slurm  sendjob_upscale_resize.slurm  sendjob_upscale_resize2.slurm  sendjob_upscale_resize_firstplane.slurm  sendjob_upscale_resize_idlers.slurm
1DTDSE/slurm/: compilation1  compilation1.slurm  compilation2  compilation2.slurm  compilation2_scale2.slurm  compilation2_scale3.slurm  compilation_v1.slurm  jobsize10.inp  jobsize40.inp  scale1_version1.slurm  scale1_version2.slurm  scale2.slurm  scale2_v1.slurm  scale2_v3.slurm  scale2_v5-24h.slurm  scale2_version1.slurm  scale2_version2.slurm  scale3.slurm  scale3_v2.slurm  scale3_v4.slurm  scale3_v5-24h.slurm  scale3_v5.slurm  scale_mini_v2.slurm  scale_mini_v3.slurm  test_ECL.slurm  test_Maker1_ECL.slurm  test_Maker2_ECL.slurm  test_Maker3_ECL.slurm  test_Maker4_ECL.slurm  test_convegence_ECL.slurm
1DTDSE/sources/: MPI-TDSE.c  compile_readstring_test.sh  compile_write_double_test.sh  constants.c  constants.h  counting.c  counting2.c  counting_strided.c  h5namelist.c  h5namelist.h  main.c  numerical_constants.h  prop.c  prop.h  reading_serial.c  singleTDSE.c  singleTDSE.h  single_caller.c  single_stride.c  strided_scheduler.c  strided_scheduler_separated_outs_coarsen.c  strided_scheduler_separated_outs_coarsen_orig.c  strided_scheduler_separated_outs_coarsen_test.c  structures.c  structures.h  test_readstring.c  test_writedouble.c  tools.c  tools.h  tools_MPI-RMA.c  tools_MPI-RMA.h  tools_algorithmic.c  tools_algorithmic.h  tools_analytic_fields.c  tools_analytic_fields.h  tools_fftw3.c  tools_fftw3.h  tools_hdf5.c  tools_hdf5.h  tridiag.c  (+4 more)
CUPRAD/: CMakeLists.txt  DEVELOPMENT.md  README.md  compile.txt  job.sh
CUPRAD/CMakeLists/: CMakeLists.txt
CUPRAD/CMakes/: CMakeLists (Clean working version of Hyperion CMake).txt  CMakeLists (Hyperion, custom linking).txt  CMakeLists (local compilation OK).txt
CUPRAD/benchmarks/: HDF5starting.m  add_dens_modulation1.py  add_dens_modulation10.py  add_dens_modulation2.py  add_dens_modulation3.py  add_dens_modulation_TDSE.py  add_dens_modulation_TDSE2.py
CUPRAD/clusters/: test.h5
CUPRAD/density_mod_benchmarks/: compare_exit_fields_ext.py  (+1 more)
FSPA/: run.py  (+4 more)
(+1318 files in other folders)
